<resources>
    <string name="app_name">4_secondPhaseOfApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_portfolio">Portfolios</string>
    <string name="menu_resume">Resume</string>

    <string name="my_name">Kyle Joaquim</string>
    <string name="photo_description">Photo of me</string>
    <string name="reading_list_title">What I\'m Reading</string>
    <string name="book1">My Struggle: Vol. 2</string>
    <string name="author1">Karl Ove Knausgard</string>
    <string name="book2">House of Leaves</string>
    <string name="author2">Mark Z. Danielewski</string>
    <string name="book3">We Were the Mulvaneys</string>
    <string name="author3">Joyce Carol Oates</string>
    <string name="book4">Because Internet</string>
    <string name="author4">Gretchen McCulloch</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="about_me">About Me</string>
    <string name="label1">Where I Was Born</string>
    <string name="place1">Winchester, MA</string>
    <string name="label2">Where I Live Now</string>
    <string name="place2">Everett, MA</string>
    <string name="label3">Where I\'d Like To Live</string>
    <string name="place3">Cambridge, MA</string>
</resources>